fix OOM HeapSpace build error