@@ -72,6 +72,9 @@
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.12</version>
+               <configuration>
+                  <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=512m</argLine>
+               </configuration>
             </plugin>
          </plugins>
       </pluginManagement>
